--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vue/compiler-sfc": "^3.4.20",
     "core-js": "^3.8.3",
     "dropzone": "^6.0.0-beta.2",
+    "firebase": "^10.8.1",
     "vue": "^3.4.20",
     "vue-demi": "^0.14.7",
+    "vue-router": "^4.3.0",
     "vue3-dropzone": "^2.2.1",
     "vue3-form-validation": "^5.1.0",
     "vue3-multi-stepper": "^1.1.7"
