--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@vue/compiler-sfc": "^3.4.20",
+    "@vuepic/vue-datepicker": "^8.2.0",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "dropzone": "^6.0.0-beta.2",
@@ -19,6 +20,7 @@
     "vue": "^3.4.20",
     "vue-demi": "^0.14.7",
     "vue-router": "^4.3.0",
+    "vue-script2": "^2.1.0",
     "vue3-dropzone": "^2.2.1",
     "vue3-form-validation": "^5.1.0",
     "vue3-multi-stepper": "^1.1.7"
