--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@vue/compiler-sfc": "^3.4.20",
     "@vuepic/vue-datepicker": "^8.2.0",
+    "assert": "^2.1.0",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "dropzone": "^6.0.0-beta.2",
+    "express": "^4.18.3",
     "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "iso-3166-country-list": "^0.2.0",
+    "path-browserify": "^1.0.1",
+    "pg": "^8.11.3",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "vue": "^3.4.20",
     "vue-demi": "^0.14.7",
     "vue-router": "^4.3.0",
     "vue-script2": "^2.1.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-dropzone": "^2.2.1",
     "vue3-form-validation": "^5.1.0",
     "vue3-multi-stepper": "^1.1.7"
