--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "gsap": "^3.12.5",
     "iso-3166-country-list": "^0.2.0",
+    "multer": "^1.4.5-lts.1",
     "path-browserify": "^1.0.1",
     "pg": "^8.11.3",
     "stream-browserify": "^3.0.0",
